Infra-repo/k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskapp-ingress
  namespace: taskapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.kentaskapp.online
    secretName: taskapp-tls
  rules:
  - host: app.kentaskapp.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taskapp-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: taskapp-backend
            port:
              number: 5000
